@@ -1,3 +1,7 @@
+2011-12-13  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Follow-up to bug #13428: pi1/captcha.php: PHP Fatal Error when called directly
+
 2011-12-12  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #32477: Reference to tslib_pibase constructor in tx_srfreecap_pi2
